--- a/templates/rango/myaccount.html
+++ b/templates/rango/myaccount.html
@@ -170,7 +170,7 @@
 <body>
     <div class="w header">
         <div class="mail">
-            <img src="./img/mail.jpeg" class="mail_img" title="邮箱图片" />
+            <img src="./img/mail.jpeg" class="mail_img" title="picture" />
         </div>
         <div class="user">
             <div class="search">
@@ -208,7 +208,7 @@
 
         <div class="content">
             <div class="clearfix">
-                <img src="./img/mail.jpeg" title="邮箱图片" width="100px" style="float: left;margin-left: 100px;" />
+                <img src="./img/mail.jpeg" title="Profile Picture" width="100px" style="float: left;margin-left: 100px;" />
                 <h6 style="float: left;margin: 40px 0px 0 60px;">hello, XXX, Welcome</h6>
             </div>
             <div class="balance" style="margin-left: 30px;">
