--- a/templates/rango/accountDetail.html
+++ b/templates/rango/accountDetail.html
@@ -211,7 +211,17 @@
                 <img src="./img/mail.jpeg" title="Profile Picture" width="100px" style="float: left;margin-left: 100px;" />
                 <h6 style="float: left;margin: 40px 0px 0 60px;">hello, XXX, Welcome</h6>
             </div>
+            {% if accountList %}
+            <ul>
+            {% for account in accountList %}
+                <li>{{ account.accountName }}</a></li>
+            {% endfor %}
+            </ul>
+            {% else %}
+                <strong>There are no categories present.</strong>>
+            {% endif %}
         </div>
+        
 
         <div class="ad2">
             <img src="./img/ad.jpeg" width="200px" height="400px" />
