--- a/templates/rango/accountDetail.html
+++ b/templates/rango/accountDetail.html
@@ -1,191 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="widt, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    .w {
-        width: 1200px;
-        margin: auto;
-    }
-
-    li {
-        list-style: none;
-    }
-
-    a {
-        text-decoration: none;
-    }
-
-    .header {
-        margin-top: 20px;
-        height: 200px;
-        box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.1);
-    }
-
-    .mail_img {
-        width: 100px;
-        height: 150px;
-    }
-
-    .mail {
-        float: left;
-    }
-
-    .user {
-        float: right;
-    }
-
-    .search input {
-        float: left;
-        width: 345px;
-        height: 40px;
-        border: 1px solid #00a4ff;
-        border-right: 0;
-        color: #bfbfbf;
-        font-size: 14px;
-        padding-left: 15px;
-    }
-
-    .search button {
-        float: left;
-        width: 50px;
-        height: 42px;
-        border: 0;
-        background: url(img/btn.png);
-
-    }
-
-    .login {
-        margin-top: 51px;
-    }
-
-    .login button {
-        display: block;
-        width: 100px;
-        height: 60px;
-        border: 0;
-        margin-top: 20px;
-        margin-left: 310px;
-        background-color: #00a4ff;
-        border-radius: 5px;
-    }
-
-    .nav {
-        height: 60px;
-        background-color: #fff;
-        margin-top: 10px;
-        box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.1);
-        line-height: 60px;
-    }
-
-    .nav ul {
-        float: left;
-        margin-left: 30px;
-    }
-
-    .nav ul li {
-        float: left;
-    }
-
-    .nav ul li a {
-        padding: 0 30px;
-        font-size: 16px;
-        color: #050505;
-        border-left: 1px solid #ccc;
-    }
-
-    .container {
-        box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.1);
-        margin-top: 20px;
-
-    }
-
-    .container .ad1 {
-        float: left;
-    }
-
-    .container .content {
-        width: 700px;
-        margin: 0 50px 0 50px;
-        float: left;
-    }
-
-    .container .ad2 {
-        float: right;
-    }
-
-
-    .balance input {
-        width: 300px;
-        height: 30px;
-        border: 1px solid #00a4ff;
-        color: #bfbfbf;
-        font-size: 14px;
-        padding-left: 15px;
-        margin-left: 72px
-    }
-
-    .balance button {
-        width: 100px;
-        height: 30px;
-        border: 0;
-        background-color: #00a4ff;
-        border-radius: 5px;
-    }
-
-    .logout button {
-        width: 100px;
-        height: 50px;
-        border: 0;
-        background-color: #00a4ff;
-        margin: 200px 300px 0 230px;
-        border-radius: 5px;
-    }
-
-    .clearfix:before,
-    .clearfix:after {
-        content: "";
-        display: table;
-    }
-
-    .clearfix:after {
-        clear: both;
-    }
-
-    .clearfix {
-        *zoom: 1;
-    }
-</style>
-
-<body>
-    <div class="w header">
-        <div class="mail">
-            <img src="./img/mail.jpeg" class="mail_img" title="picture" />
-        </div>
-        <div class="user">
-            <div class="search">
-                <input type="text" placeholder="Search" />
-                <button></button>
-            </div>
-            <div class="login">
-                <button type="button">login</button>
-                <button type="button">sigin up</button>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="w nav">
+{% block nav_block %}    
+<div class="w nav">
         <ul style="margin-left:320px">
             <li>
                 <a href="#" style="border: 0;">Home</a>
@@ -194,23 +12,27 @@
                 <a href="#">Hot</a>
             </li>
             <li>
-                <a href="#">My Orders</a>
+                <a href="#">My Order</a>
             </li>
             <li>
-                <a href="#">My Accounts</a>
+                <a href="#" style="background-color: skyblue;">My Account</a>
             </li>
         </ul>
-    </div>
+</div>
+{% endblock %}
+
+    {% block content_block %}
     <div class="container w">
         <div class="ad1">
-            <img src="./img/ad.jpeg" width="200px" height="400px" />
+            <img src="{% static "images/lol.jpg" %}" width="200px" height="400px" />
         </div>
 
         <div class="content">
             <div class="clearfix">
-                <img src="./img/mail.jpeg" title="Profile Picture" width="100px" style="float: left;margin-left: 100px;" />
+                <img src="{% static "images/mail.jpg" %}" title="picture" width="100px" style="float: left;margin-left: 100px;" />
                 <h6 style="float: left;margin: 40px 0px 0 60px;">hello, XXX, Welcome</h6>
             </div>
+
             {% if accountList %}
             <ul>
             {% for account in accountList %}
@@ -221,13 +43,9 @@
                 <strong>There are no categories present.</strong>>
             {% endif %}
         </div>
-        
 
         <div class="ad2">
-            <img src="./img/ad.jpeg" width="200px" height="400px" />
+            <img src="{% static "images/Overwatch.jpg" %}" width="200px" height="400px" />
         </div>
-
     </div>
-</body>
-
-</html>
+    {% endblock %}
