--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -1,18 +1,61 @@
-{% extends 'rango/base.html' %}
-{% load staticfiles %}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
 
-{% block title_block %}
-    Login
-{% endblock %}
+        #login-form {
+            width: 600px;
+            background-color: rgb(199, 219, 250);
+            margin: 0 auto;
+            margin-top: 60px;
+            padding-bottom: 30px;
+        }
 
-{% block body_block %}
-<h1>Login to Rango</h1>
-<form id="login_form" method="post" action="{% url 'rango:login' %}">
-    {% csrf_token %}
-    Username: <input type="text" name="username" value="" size="50" />
-    <br />
-    Password: <input type="password" name="password" value="" size="50" />
-    <br />
-    <input type="submit" value="submit" />
-</form>
-{% endblock %} 
+        .form-item {
+            display: block;
+            margin-left: 30px;
+            margin-top: 20px;
+            width: 500px;
+        }
+
+        label {
+            text-align: right;
+            width: 200px;
+            display: inline-block;
+        }
+
+        input {
+            width: 200px;
+        }
+    </style>
+
+<body>
+    <div id="login-form">
+        <h2 style="text-align: center;padding-top: 10px;">Login in to Rango</h2>
+        <form action="#">
+            
+            <form id="login_form" method="post" action="{% url 'rango:login' %}">
+                {% csrf_token %}
+                
+                <div class="form-item">
+                    <label>Username</label>
+                    <input type="text" name="username" value="" size="50" />
+                </div>
+                
+                <div class="form-item">
+                    <label>Password</label>
+                    <input type="password" name="password" value="" size="50" />
+                </div>
+            </form>
+
+            <input type="submit" style="width: 60px; margin-left: 170px;margin-top: 30px;margin-right: 30px;zoom: 120%;"
+                value="Login in"> <a href="#" style="text-decoration: none;">Forgot password?</a>
+        </form>
+    </div>
+</body>
