--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -148,7 +148,7 @@
             <div class="user">
                 <div class="login">
                     <button type="button">login</button>
-                    <button type="button">sigin up</button>
+                    <button type="button">sign up</button>
                 </div>
             </div> 
     </div>
