--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -42,7 +42,7 @@
 <body>
     <div id="login-form">
         <h2 style="text-align: center;padding-top: 10px;">Register</h2>
-        <form action="#">
+        
             {% if registered %}
             <strong>thank you for registering!</strong>
             <a href="{% url 'rango:index' %}">Return to the homepage.</a><br />
@@ -51,8 +51,6 @@
                 enctype="multipart/form-data">
 
                 {% csrf_token %}
-
-                <!-- Display each form -->
                 {{ user_form.as_p }}
                 {{ profile_form.as_p }}
 
@@ -65,12 +63,12 @@
             <div class="form-item">
                 <input type="checkbox"
                     style="width: 10px; margin-left: 100px;margin-right: 6px;zoom: 120%;margin-top: 6px;">I agree to
-                the Tems of
-                Use and Privocy
+                the Terms of
+                Use and Privacy
                 Policy
             </div>
             
-        </form>
+        
     </div>
 </body>
 
