--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -45,7 +45,7 @@
         
             {% if registered %}
             <strong>thank you for registering!</strong>
-            <a href="{% url 'rango:index' %}">Return to the homepage.</a><br />
+            <a href="{% url 'rango:login' %}">Return to the login.</a><br />
             {% else %}
             <form id="user_form" method="post" action="{% url 'rango:register' %}"
                 enctype="multipart/form-data">
