--- a/templates/rango/myaccount.html
+++ b/templates/rango/myaccount.html
@@ -17,6 +17,12 @@
             <li>
                 <a href="#" style="background-color: skyblue;">My Account</a>
             </li>
+            <li>
+                <a href="#">Register</a>
+            </li>
+            <li>
+                <a href="#">Login</a>
+            </li>
         </ul>
 </div>
 {% endblock %}
