--- a/templates/rango/myorder.html
+++ b/templates/rango/myorder.html
@@ -181,19 +181,6 @@
 </style>
 
 <body>
-    <div class="w header">
-        <div class="mail">
-            <img src="{% static "images/mail.jpg" %}" class="mail_img" title="picture" />
-        </div>
-        <div class="user">
-
-            <div class="login">
-                <button type="button">login</button>
-                <button type="button">sigin up</button>
-            </div>
-
-        </div>
-    </div>
 
     <div class="w nav">
             <ul style="margin-left:320px">
@@ -208,6 +195,12 @@
                 </li>
                 <li>
                     <a href="#"> My Account</a>
+                </li>
+                <li>
+                    <a href="#">Register</a>
+                </li>
+                <li>
+                    <a href="#">Login</a>
                 </li>
             </ul>
     </div>
