--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -17,6 +17,12 @@
             <li>
                 <a href="#">My Accounts</a>
             </li>
+            <li>
+                <a href="#">Register</a>
+            </li>
+            <li>
+                <a href="#">Login</a>
+            </li>
         </ul>
 </div>
 {% endblock %}
