--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -17,12 +17,15 @@
             <li>
                 <a href="#">My Accounts</a>
             </li>
-            <li>
-                <a href="#">Register</a>
-            </li>
-            <li>
-                <a href="#">Login</a>
-            </li>
+            {% if user.is_authenticated %}
+                <!-- Show these links when the user is logged in -->
+                <li><strong>welcome back  {{ user.username }}!</strong></li>
+                <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+            {% else %}
+                <!-- Show these links when the user is NOT logged in -->
+                <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+                <li><a href="{% url 'rango:login' %}">Login</a></li>
+            {% endif %}
         </ul>
 </div>
 {% endblock %}
