--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -37,7 +37,7 @@
 
 <body>
     <div id="login-form">
-        <h2 style="text-align: center;padding-top: 10px;">Login in to Rango</h2>
+        <h2 style="text-align: center;padding-top: 10px;">Login in to my account</h2>
             <form id="login_form" method="post" action="{% url 'rango:login' %}">
                 {% csrf_token %}
                 
