--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,16 +6,16 @@
 <div class="w nav">
         <ul style="margin-left:320px">
             <li>
-                <a href="#" style="border: 0; background-color: skyblue;">Home</a>
+                <a href="{% url 'rango:index' %}" style="border: 0; background-color: skyblue;">Home</a>
             </li>
             <li>
                 <a href="#">Hot</a>
             </li>
             <li>
-                <a href="#">My Orders</a>
+                <a href="{% url 'rango:myorder' %}">My Orders</a>
             </li>
             <li>
-                <a href="#">My Accounts</a>
+                <a href="{% url 'rango:myaccount' %}">My Accounts</a>
             </li>
             {% if user.is_authenticated %}
                 <!-- Show these links when the user is logged in -->
@@ -49,9 +49,9 @@
                 {% if categories %}
                  <ul>
                     {% for category in categories %}
-                        <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
+                        <li><a href="{% url 'rango:accountList' category.name %}">{{ category.name }}</a></li>
                     {% endfor %}
-                </ul
+                 </ul>
                 {% else %}
                     <strong> There are no categories present.</strong>>
                 {% endif %}
