--- a/templates/rango/myorder.html
+++ b/templates/rango/myorder.html
@@ -185,16 +185,16 @@
     <div class="w nav">
             <ul style="margin-left:320px">
                 <li>
-                    <a href="#" style="border: 0;">Home</a>
+                    <a href="{% url 'rango:index' %}" style="border: 0; background-color: skyblue;">Home</a>
                 </li>
                 <li>
                     <a href="#">Hot</a>
                 </li>
                 <li>
-                    <a href="#" style="background-color: skyblue;">My Order</a>
+                    <a href="{% url 'rango:myorder' %}">My Orders</a>
                 </li>
                 <li>
-                    <a href="#"> My Account</a>
+                    <a href="{% url 'rango:myaccount' %}">My Accounts</a>
                 </li>
                 <li>
                     <a href="#">Register</a>
@@ -210,33 +210,13 @@
             <img src="{% static "images/lol.jpg" %}" width="200px" height="460px" />
         </div>
 
-        <div class="content">
-            <ul>
-                <li>
-                    <img src="{% static "images/mail.jpg" %}" class="mail_img" style="width: 100px;" title="邮箱图片" />
-                </li>
-                <li><input type="text" placeholder="Accunt Information"></li>
-                <li><input type="text" placeholder="Status"></li>
-                <li><button type="button">Comment</button></li>
-            </ul>
-            <ul>
-                <li>
-                    <img src="{% static "images/mail.jpg" %}" class="mail_img" style="width: 100px;" title="邮箱图片" />
-                </li>
-                <li><input type="text" placeholder="Accunt Information"></li>
-                <li><input type="text" placeholder="Status"></li>
-                <li><button type="button">Comment</button></li>
-            </ul>
-            <ul>
-                <li>
-                    <img src="{% static "images/mail.jpg" %}" class="mail_img" style="width: 100px;" title="邮箱图片" />
-                </li>
-                <li><input type="text" placeholder="Accunt Information"></li>
-                <li><input type="text" placeholder="Status"></li>
-                <li><button type="button">Comment</button></li>
-            </ul>
-
-        </div>
+        {% if orders %}
+        {% for order in orders %}
+            <div>{{order.accountName}}</div>
+        {% endfor %}
+        {% else %}
+            <strong>There are no orders for you</strong>
+        {% endif %}
 
     </div>
 </body>
