update front-end web

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load staticfiles %}
+{% load static %}
 
 <html lang="en">
 
@@ -24,28 +24,9 @@
         text-decoration: none;
     }
 
-    .header {
-        margin-top: 20px;
-        height: 200px;
-        box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.1);
-    }
-
-    .mail_img {
-        width: 100px;
-        height: 100px;
-    }
-
-    .mail {
-        float: left;
-    }
-
-    .user {
-        float: right;
-    }
-
-
-    .login {
-        margin-top: 20px;
+    .w {
+        margin: 0 auto;
+        width: 1200px;
     }
 
     .login button {
@@ -97,6 +78,7 @@
         width: 700px;
         margin: 0 50px 0 50px;
         float: left;
+        text-align: center;
     }
 
     .container .ad2 {
@@ -132,6 +114,10 @@
 
     .clearfix {
         *zoom: 1;
+    }
+       .select_nav {
+        border: 0;
+        background-color: skyblue;
     }
 </style>
 
