--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 {% extends 'rango/base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 {% block nav_block %}    
 <div class="w nav">
         <ul style="margin-left:320px">
             <li>
-                <a href="{% url 'rango:index' %}" style="border: 0; background-color: skyblue;">Home</a>
+                <a href="{% url 'rango:index' %}" class="select_nav">Home</a>
             </li>
             <li>
                 <a href="#">Hot</a>
@@ -36,9 +36,8 @@
         <img src="{% static "images/lol.jpg" %}" width="200px" height="400px" />
 </div>
 
-<div class="content">
-    <div class="clearfix">
-        <body style="float: left;margin: 40px 0px 0 60px;">
+<div class="w">
+    <div class="content">
                 <h1>Choose a game first!</h1>
                 
                 <div>   
@@ -56,7 +55,6 @@
                     <strong> There are no categories present.</strong>>
                 {% endif %}
                 </div>
-        </body>
     </div>
 </div>
 
