--- a/templates/rango/myaccount.html
+++ b/templates/rango/myaccount.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 {% extends 'rango/base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 {% block nav_block %}    
 <div class="w nav">
         <ul style="margin-left:320px">
             <li>
-                <a href="{% url 'rango:index' %}" style="border: 0; background-color: skyblue;">Home</a>
+                <a href="#">Home</a>
             </li>
             <li>
                 <a href="#">Hot</a>
@@ -15,7 +15,7 @@
                 <a href="{% url 'rango:myorder' %}">My Orders</a>
             </li>
             <li>
-                <a href="{% url 'rango:myaccount' %}">My Accounts</a>
+                <a href="{% url 'rango:myaccount' %}" class="select_nav">My Accounts</a>
             </li>
             <li>
                 <a href="#">Register</a>
@@ -31,11 +31,10 @@
     <div class="container w">
         <div class="ad1">
             <img src="{% static "images/lol.jpg" %}" width="200px" height="400px" />
-    </div>
-
-    <div class="content">
+        </div>
+     <div class="content">
         <div class="clearfix">
-            <img src="{% static "images/mail.jpg" %}" title="picture" width="100px" style="float: left;margin-left: 100px;" />
+            <img src="{% static "images/mail.jpg" %}" title="picture" width="100px" style="float: left;margin-left: 186px;" />
             <h6 style="float: left;margin: 40px 0px 0 60px;">hello, XXX, Welcome</h6>
         </div>
         <div class="balance" style="margin-left: 30px;">
@@ -50,7 +49,7 @@
             <span>balance: </span>
             <span>{{u.balance}}</span>
             {% endfor %}
-            
+
         {% else %}
             <div>You have not logged in</div>
         {% endif %}
@@ -59,4 +58,7 @@
     <div class="ad2">
         <img src="{% static "images/Overwatch.jpg" %}" width="200px" height="400px" />
     </div>
+    </div>
+
+
 {% endblock %}
