--- a/templates/rango/myorder.html
+++ b/templates/rango/myorder.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load staticfiles %}
+{% load static %}
 
 <html lang="en">
 
@@ -28,22 +28,23 @@
         text-decoration: none;
     }
 
-    .header {
-        margin-top: 20px;
-        height: 200px;
+    .container {
         box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.1);
+        margin-top: 20px;
+
     }
 
-    .mail_img {
-        width: 100px;
-        height: 100px;
-    }
-
-    .mail {
+    .container .ad1 {
         float: left;
     }
 
-    .user {
+    .container .content {
+        width: 700px;
+        margin: 0 50px 0 50px;
+        float: left;
+    }
+
+    .container .ad2 {
         float: right;
     }
 
@@ -118,6 +119,7 @@
 
     .container .content {
         margin: 0 50px 0 50px;
+        text-align: center;
     }
 
     .content ul {
@@ -178,45 +180,70 @@
     .clearfix {
         *zoom: 1;
     }
+
+    .select_nav {
+        border: 0;
+        background-color: skyblue;
+    }
 </style>
 
 <body>
 
-    <div class="w nav">
-            <ul style="margin-left:320px">
-                <li>
-                    <a href="{% url 'rango:index' %}" style="border: 0; background-color: skyblue;">Home</a>
-                </li>
-                <li>
-                    <a href="#">Hot</a>
-                </li>
-                <li>
-                    <a href="{% url 'rango:myorder' %}">My Orders</a>
-                </li>
-                <li>
-                    <a href="{% url 'rango:myaccount' %}">My Accounts</a>
-                </li>
-                <li>
-                    <a href="#">Register</a>
-                </li>
-                <li>
-                    <a href="#">Login</a>
-                </li>
-            </ul>
+<div class="w nav">
+    <ul style="margin-left:320px">
+        <li>
+            <a href="{% url 'rango:index' %}">Home</a>
+        </li>
+        <li>
+            <a href="#">Hot</a>
+        </li>
+        <li>
+            <a href="{% url 'rango:myorder' %}" class="select_nav">My Orders</a>
+        </li>
+        <li>
+            <a href="{% url 'rango:myaccount' %}">My Accounts</a>
+        </li>
+        {% if user.is_authenticated %}
+        <!-- Show these links when the user is logged in -->
+        <li><strong>welcome back  {{ user.username }}!</strong></li>
+        <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+    {% else %}
+        <!-- Show these links when the user is NOT logged in -->
+        <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+        <li><a href="{% url 'rango:login' %}">Login</a></li>
+    {% endif %}
+    </ul>
+</div>
+
+<div class="container w">
+    <div class="ad1">
+        <img src="{% static "images/lol.jpg" %}" width="200px" height="400px"/>
     </div>
 
-    <div class="container w">
-        <div class="ad1">
-            <img src="{% static "images/lol.jpg" %}" width="200px" height="460px" />
+    <div class="w">
+        <div class="content">
+            <h1>Choose a game first!</h1>
+
+            <div>
+                These are all we got here! <br/>
+                <strong>{{ boldmessage }}</strong><br/>
+            </div>
+            <div>
+                {% if categories %}
+                    <ul>
+                        {% for category in categories %}
+                            <li><a href="{% url 'rango:accountList' category.name %}">{{ category.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <strong> There are no categories present.</strong>>
+                {% endif %}
+            </div>
         </div>
-
-        {% if orders %}
-        {% for order in orders %}
-            <div>{{order.accountName}}</div>
-        {% endfor %}
-        {% else %}
-            <strong>There are no orders for you</strong>
-        {% endif %}
-
     </div>
+
+    <div class="ad2">
+        <img src="{% static "images/Overwatch.jpg" %}" width="200px" height="400px"/>
+    </div>
+</div>
 </body>
