--- a/templates/rango/accountList.html
+++ b/templates/rango/accountList.html
@@ -5,18 +5,24 @@
 {% block nav_block %}    
 <div class="w nav">
         <ul style="margin-left:320px">
-            <li>
-                <a href="#" style="border: 0;">Home</a>
-            </li>
-            <li>
-                <a href="#">Hot</a>
-            </li>
-            <li>
-                <a href="#">My Order</a>
-            </li>
-            <li>
-                <a href="#">My Account</a>
-            </li>
+          <li>
+            <a href="{% url 'rango:index' %}" class="select_nav">Home</a>
+          </li>
+          <li>
+              <a href="{% url 'rango:myorder' %}">My Orders</a>
+          </li>
+          <li>
+              <a href="{% url 'rango:myaccount' %}">My Accounts</a>
+          </li>
+          {% if user.is_authenticated %}
+              <!-- Show these links when the user is logged in -->
+              <li><strong>welcome back  {{ user.username }}!</strong></li>
+              <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+          {% else %}
+              <!-- Show these links when the user is NOT logged in -->
+              <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+              <li><a href="{% url 'rango:login' %}">Login</a></li>
+          {% endif %}
         </ul>
 </div>
 {% endblock %}
@@ -36,9 +42,11 @@
           <div style="margin-left: 20px">
             <br>
             {% if accounts %}
-            {% for account in accounts %}
-              <div>{{account.accountName}}</div>
-            {% endfor %}
+              {% for account in accounts %}
+                <span>{{account.accountName}}</span>
+                <span>{{account.seller}}</span>
+                <br>
+              {% endfor %}
             {% else %}
               <strong>There are no accounts in this category</strong>
             {% endif %}
