--- a/templates/rango/myorder.html
+++ b/templates/rango/myorder.html
@@ -192,26 +192,23 @@
 <div class="w nav">
     <ul style="margin-left:320px">
         <li>
-            <a href="{% url 'rango:index' %}">Home</a>
+            <a href="{% url 'rango:index' %}" class="select_nav">Home</a>
         </li>
         <li>
-            <a href="#">Hot</a>
-        </li>
-        <li>
-            <a href="{% url 'rango:myorder' %}" class="select_nav">My Orders</a>
+            <a href="{% url 'rango:myorder' %}">My Orders</a>
         </li>
         <li>
             <a href="{% url 'rango:myaccount' %}">My Accounts</a>
         </li>
         {% if user.is_authenticated %}
-        <!-- Show these links when the user is logged in -->
-        <li><strong>welcome back  {{ user.username }}!</strong></li>
-        <li><a href="{% url 'rango:logout' %}">Logout</a></li>
-    {% else %}
-        <!-- Show these links when the user is NOT logged in -->
-        <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
-        <li><a href="{% url 'rango:login' %}">Login</a></li>
-    {% endif %}
+            <!-- Show these links when the user is logged in -->
+            <li><strong>welcome back  {{ user.username }}!</strong></li>
+            <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+        {% else %}
+            <!-- Show these links when the user is NOT logged in -->
+            <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+            <li><a href="{% url 'rango:login' %}">Login</a></li>
+        {% endif %}
     </ul>
 </div>
 
