--- a/templates/rango/accountList.html
+++ b/templates/rango/accountList.html
@@ -37,7 +37,17 @@
             <br>
             {% if accounts %}
             {% for account in accounts %}
-              <div>{{account.accountName}}</div>
+            
+            <div class="card one">
+                <li><a href="{% url 'rango:account_detail' account.accountName %}">{{account.accountName}}</a></li>
+                <span>Description: {{account.description}}</span>
+            </br>
+                  <span>Price:{{account.price}}</span>
+            </br>
+                  <span>seller:{{account.seller}}</span>
+                 
+            </div>
+            
             {% endfor %}
             {% else %}
               <strong>There are no accounts in this category</strong>
@@ -61,6 +71,34 @@
       }
     }
   </script>
+
+  <style>
+    body{
+      margin: 0;
+      padding: 0;
+    }
+  
+    .card{
+        width: 42vw;
+        height: 12vh;
+        
+        border-radius: 2vh;
+        margin: 2vh;
+        border-radius: 12px;
+
+        color: #070707;
+        cursor: pointer;
+        transition: all 1s ease;
+        display: block;
+        
+    }
+    .one{
+        background-color: #ededf3;
+        
+        z-index: 1;
+        opacity: 0.9;
+      }
+  </style>
 
 {% endblock %}
 
