--- a/templates/rango/accountList.html
+++ b/templates/rango/accountList.html
@@ -36,8 +36,12 @@
       <div class="content">
           <div class="clearfix">
           <br>
-              <img src="{% static "images/mail.jpg" %}" title="picture" width="100px" style="float: left;margin-left: 100px;" />
-              <h6 style="float: left;margin: 40px 0px 0 60px;">hello, XXX, Welcome</h6>
+              <img src="{% static "images/mail.jpg" %}" title="picture" width="100px" style="float: left;margin-left: 150px;" />
+              {% if user.is_authenticated %}
+              <h6 style="float: left;margin: 40px 0px 0 50px;">hello, {{user.username}}, Welcome</h6>
+              {% else %}
+              <h6 style="float: left;margin: 40px 0px 0 50px;">You have not logged in</h6>
+              {% endif %}
           </div>
           <div style="margin-left: 20px">
             <br>
