--- a/templates/rango/myaccount.html
+++ b/templates/rango/myaccount.html
@@ -33,9 +33,10 @@
             <img src="{% static "images/lol.jpg" %}" width="200px" height="400px" />
         </div>
      <div class="content">
-        <div class="clearfix">
-            <img src="{% static "images/mail.jpg" %}" title="picture" width="100px" style="float: left;margin-left: 186px;" />
-            <h6 style="float: left;margin: 40px 0px 0 60px;">hello, XXX, Welcome</h6>
+        <div class="clearfix" style="margin-left: 100px">
+            <br>
+            <img src="{% static "images/mail.jpg" %}" title="picture" width="100px" style="float: left;margin-left: 100px;" />
+            <h6 style="float: left;margin: 40px 0px 0 30px;">hello, XXX, Welcome</h6>
         </div>
         <div class="balance" style="margin-left: 30px;">
             <form id="popup_form" method="post" action="{% url 'rango:popup' %}">
