--- a/templates/rango/myaccount.html
+++ b/templates/rango/myaccount.html
@@ -6,13 +6,13 @@
 <div class="w nav">
         <ul style="margin-left:320px">
             <li>
-                <a href="{% url 'rango:index' %}" class="select_nav">Home</a>
+                <a href="{% url 'rango:index' %}">Home</a>
             </li>
             <li>
                 <a href="{% url 'rango:myorder' %}">My Orders</a>
             </li>
             <li>
-                <a href="{% url 'rango:myaccount' %}">My Accounts</a>
+                <a href="{% url 'rango:myaccount' %}" class="select_nav">My Accounts</a>
             </li>
             {% if user.is_authenticated %}
                 <!-- Show these links when the user is logged in -->
