--- a/templates/rango/myorder.html
+++ b/templates/rango/myorder.html
@@ -192,10 +192,10 @@
 <div class="w nav">
     <ul style="margin-left:320px">
         <li>
-            <a href="{% url 'rango:index' %}" class="select_nav">Home</a>
+            <a href="{% url 'rango:index' %}">Home</a>
         </li>
         <li>
-            <a href="{% url 'rango:myorder' %}">My Orders</a>
+            <a href="{% url 'rango:myorder' %}" class="select_nav">My Orders</a>
         </li>
         <li>
             <a href="{% url 'rango:myaccount' %}">My Accounts</a>
