--- a/templates/rango/accountDetail.html
+++ b/templates/rango/accountDetail.html
@@ -5,18 +5,24 @@
 {% block nav_block %}    
 <div class="w nav">
         <ul style="margin-left:320px">
-            <li>
-                <a href="#" style="border: 0;">Home</a>
-            </li>
-            <li>
-                <a href="#">Hot</a>
-            </li>
-            <li>
-                <a href="#">My Order</a>
-            </li>
-            <li>
-                <a href="#">My Account</a>
-            </li>
+          <li>
+            <a href="{% url 'rango:index' %}" class="select_nav">Home</a>
+          </li>
+          <li>
+              <a href="{% url 'rango:myorder' %}">My Orders</a>
+          </li>
+          <li>
+              <a href="{% url 'rango:myaccount' %}">My Accounts</a>
+          </li>
+          {% if user.is_authenticated %}
+              <!-- Show these links when the user is logged in -->
+              <li><strong>welcome back  {{ user.username }}!</strong></li>
+              <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+          {% else %}
+              <!-- Show these links when the user is NOT logged in -->
+              <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+              <li><a href="{% url 'rango:login' %}">Login</a></li>
+          {% endif %}
         </ul>
 </div>
 {% endblock %}
@@ -48,7 +54,7 @@
                   <span>status:</span>
                   <span style="font-size:15px; margin-left:4px; line-height:30px; height:30px;">{{account.status}}</span><br>
 
-                  <button style="margin-top: 100px; margin-left: 250px; width: 120px; height: 40px" onclick="MsgBox()">buy now
+                  <button style="margin-top: 100px; margin-left: 0px; width: 120px; height: 40px" onclick="MsgBox()">buy now
                 {% endfor %}
               </ul>
             {% else %}
