--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -46,7 +46,7 @@
                  <ul>
                     {% for category in categories %}
                     <div class="card one">
-                        <li><a href="{% url 'rango:accountList' category.name %}">{{ category.name }}</a></li>
+                        <h2><li><a href="{% url 'rango:accountList' category.name %}">{{ category.name }}</a></li></h2>
                         
                     </div>
                         
