--- a/templates/rango/myorder.html
+++ b/templates/rango/myorder.html
@@ -202,7 +202,7 @@
         </li>
         {% if user.is_authenticated %}
             <!-- Show these links when the user is logged in -->
-            <li><strong>welcome back  {{ user.username }}!</strong></li>
+            <li><a>{{ user.username }}</a></li>
             <li><a href="{% url 'rango:logout' %}">Logout</a></li>
         {% else %}
             <!-- Show these links when the user is NOT logged in -->
